--- a/CrowdSpeak/Base.lproj/Main.storyboard
+++ b/CrowdSpeak/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Jnl-4x-euv">
             <objects>
-                <navigationController definesPresentationContext="YES" id="PUh-zd-Yhf" sceneMemberID="viewController">
+                <navigationController definesPresentationContext="YES" navigationBarHidden="YES" id="PUh-zd-Yhf" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="QPU-6P-xnp">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -31,10 +31,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gla-B1-gi6">
-                                <rect key="frame" x="79" y="210" width="162" height="46"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Splash" translatesAutoresizingMaskIntoConstraints="NO" id="ren-7V-DjY">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Talk">
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gla-B1-gi6">
+                                <rect key="frame" x="79" y="346" width="162" height="158"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -42,10 +48,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tvX-t4-vw9">
-                                <rect key="frame" x="79" y="264" width="162" height="46"/>
+                                <rect key="frame" x="79" y="138" width="162" height="142"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="Listen">
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -54,6 +61,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="ren-7V-DjY" secondAttribute="bottom" id="0LF-cU-upe"/>
+                            <constraint firstItem="ren-7V-DjY" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="IwV-X4-uF4"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="OMd-rv-Ka6"/>
                 </viewController>
@@ -73,12 +84,45 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0tv-fz-yZq">
-                                <rect key="frame" x="20" y="88" width="280" height="280"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Speaker" translatesAutoresizingMaskIntoConstraints="NO" id="3cY-RO-F22" userLabel="Background View">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c6z-4u-PJu">
+                                <rect key="frame" x="121" y="443" width="78" height="97"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="78" id="nPH-nc-xFD"/>
+                                    <constraint firstAttribute="height" constant="97" id="xLl-t3-ddC"/>
+                                </constraints>
+                                <state key="normal">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="textMessage:" destination="LFK-e6-erR" eventType="touchUpInside" id="pIx-sX-fdK"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J5K-Nl-HHi">
+                                <rect key="frame" x="0.0" y="68" width="320" height="320"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0tv-fz-yZq">
+                                        <rect key="frame" x="20" y="20" width="280" height="280"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="c6z-4u-PJu" secondAttribute="centerX" id="2Ar-Bp-3rQ"/>
+                            <constraint firstItem="3cY-RO-F22" firstAttribute="top" secondItem="eB2-8J-J6P" secondAttribute="top" id="4ty-2n-h9M"/>
+                            <constraint firstAttribute="bottom" secondItem="c6z-4u-PJu" secondAttribute="bottom" constant="28" id="USW-KI-iLf"/>
+                            <constraint firstAttribute="trailing" secondItem="3cY-RO-F22" secondAttribute="trailing" id="aTf-2M-DVG"/>
+                            <constraint firstItem="3cY-RO-F22" firstAttribute="leading" secondItem="eB2-8J-J6P" secondAttribute="leading" id="tR8-uK-bM9"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="9hv-eI-21c"/>
                     <connections>
@@ -101,12 +145,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RpW-Jb-Jgq">
-                                <rect key="frame" x="20" y="86" width="280" height="280"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Participant_Listening" translatesAutoresizingMaskIntoConstraints="NO" id="vdl-fz-Y7Z" userLabel="Background">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fJP-ZS-cHl">
+                                <rect key="frame" x="22" y="66" width="278" height="278"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RpW-Jb-Jgq">
+                                        <rect key="frame" x="27" y="32" width="214" height="214"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vdl-fz-Y7Z" secondAttribute="trailing" id="KKP-Wz-jMu"/>
+                            <constraint firstItem="vdl-fz-Y7Z" firstAttribute="leading" secondItem="1Pf-Re-FIz" secondAttribute="leading" id="gE4-AG-jZ5"/>
+                            <constraint firstItem="vdl-fz-Y7Z" firstAttribute="top" secondItem="1Pf-Re-FIz" secondAttribute="top" id="wGl-Ul-GyY"/>
+                            <constraint firstAttribute="bottom" secondItem="vdl-fz-Y7Z" secondAttribute="bottom" id="yaO-f2-zsr"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="YXc-Tn-yhb"/>
                     <connections>
@@ -118,6 +179,11 @@
             <point key="canvasLocation" x="715" y="522"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Participant_Listening" width="320" height="520"/>
+        <image name="Speaker" width="320" height="520"/>
+        <image name="Splash" width="320" height="520"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
